.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/nested_enum_utils-0.2.3/tests/compile_fail/named_enum.rs
use nested_enum_utils::enum_conversions;

#[derive(Debug)]
#[enum_conversions(Outer)]
enum Enum {
    A { value : u8 },
}

fn main() {}
